@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace AjModel.Tests.Entities
+{
+    public class Product
+    {
+        public int Id { get; set; }
+
+        public string Description { get; set; }
+    }
+}
